syntax = "proto3";
package comsos.v1beta1;

option go_package = "github.com/persistenceOne/pStake-native/x/cosmos/types";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

message WeightedAddressCosmos {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  string weight = 2 [
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string current_delegated_amount = 3 [
    (gogoproto.moretags) = "yaml:\"current_delegated_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string ideal_delegated_amount = 4 [
    (gogoproto.moretags) = "yaml:\"ideal_delegated_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string difference = 5 [
    (gogoproto.moretags) = "yaml:\"difference\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
}

message WeightedAddress {
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];
  string weight = 2 [
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message DistributionProportions {
  string validator_rewards = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"validator_rewards\"",
    (gogoproto.nullable) = false
  ];
  string developer_rewards = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"developer_rewards\"",
    (gogoproto.nullable) = false
  ];
}

message CosmosChainProposalParams {
  string chain_i_d = 1;
  google.protobuf.Duration reduce_voting_period_by = 3 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "voting_period,omitempty",
    (gogoproto.moretags)    = "yaml:\"voting_period\""
  ];
}

//Params hold the parameters for cosmos module
//TODO : check correct moretags naming convention
message Params {
  option (gogoproto.goproto_stringer) = false;

  string mint_denom = 1 [(gogoproto.moretags) = "yaml:\"mintDenom\""];
  string min_minting_amount = 2 [
    (gogoproto.moretags) = "yaml:\"min_minting_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string max_minting_amount = 3 [
    (gogoproto.moretags) = "yaml:\"min_minting_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string min_burning_amount = 4 [
    (gogoproto.moretags) = "yaml:\"min_minting_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string max_burning_amount = 5 [
    (gogoproto.moretags) = "yaml:\"min_minting_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  uint64 max_validator_to_delegate = 6 [(gogoproto.moretags) = "yaml:\"maxValidatorToDelegate\""];
  repeated WeightedAddressCosmos validator_set_cosmos_chain = 7 [(gogoproto.moretags) = "yaml:\"validatorSetCosmosChain\"", (gogoproto.nullable) = false];
  repeated WeightedAddress validator_set_native_chain = 8 [(gogoproto.moretags) = "yaml:\"validatorSetNativeChain\"", (gogoproto.nullable) = false];
  repeated WeightedAddress weighted_developer_rewards_receivers = 9 [(gogoproto.moretags) = "yaml:\"weightedDeveloperRewardsReceivers\"", (gogoproto.nullable) = false];
  DistributionProportions distribution_proportion = 10 [(gogoproto.moretags) = "yaml:\"weightedDeveloperRewardsReceivers\"", (gogoproto.nullable) = false];
  int64 epochs = 11 [(gogoproto.moretags) = "yaml:\"epochs\""];
  int64 max_incoming_and_outgoing_txns = 12 [(gogoproto.moretags) = "yaml:\"maxIncomingAndOutgoingTxns\""];
  CosmosChainProposalParams cosmos_proposal_params = 13 [(gogoproto.moretags) = "yaml:\"cosmos_proposal_params\"", (gogoproto.nullable) = false];
  string custodial_address = 14[(gogoproto.moretags) = "yaml:\"custodial_address\""];
  string delegation_threshold = 15 [
    (gogoproto.moretags) = "yaml:\"delegation_threshold\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  bool module_enabled = 16;
}
